# webrepl

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss  justfile  term.scss
src/: app.rs  main.rs
