[package]
name = "webrepl"
version = "0.2.0"
edition = "2021"
description = "Web REPL"
readme = "README.md"
repository = "https://github.com/snyball/webrepl"
license = "MIT OR Apache-2.0"
keywords = ["web", "repl"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
gloo = "0.8.0"
gloo-console = "0.2.3"
yew = { version="0.20", features=["csr"] }
web-sys = { version = "0.3.61", features = ["Range", "Selection"] }

[dependencies.spaik]
git = "https://github.com/snyball/spaik.git"
default-features = false
features = ["no-threading"]
rev = "99cd8ff40b245978cdc05b831bf12ecb9184e5ec"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
